--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-__pycache__/losses.cpython-312.pyc
-__pycache__/modules.cpython-312.pyc
-__pycache__/projet_etu.cpython-312.pyc
+/__pycache__/**
+/tests/__pycache__/**
